# playsync

./: .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PRODUCTION_DEPLOY_CHECKLIST.md  README.md  client_secrets.json  docker-compose.yml  playsync_backup.sql  playsync_full.sql  pyproject.toml  requirements.txt  test.ics  timetable.xlsx
app/: config.py
app/api/: auth.py  dependencies.py  main.py
app/api/routes/: courses.py  events.py  ics.py  sync.py  users.py
app/db/: connection.py  models.py  repository.py
app/parser/: tmu_parser.py
app/services/: google_calendar.py  sync_service.py
client/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/(auth)/callback/: page.tsx
client/src/app/(dashboard)/courses/: page.tsx
client/src/app/callback/: page.tsx
client/src/app/courses/: page.tsx
client/src/app/dashboard/: page.tsx
client/src/components/courses/: SearchBox.tsx
client/src/context/: AuthContext.tsx
client/src/hooks/: useCourses.ts  useSearch.ts
client/src/lib/: api.ts  device.ts
client/src/types/: course.ts
migrations/: add_full_name.sql  add_user_courses.sql
playsync.egg-info/: PKG-INFO  SOURCES.txt
scripts/: clear_calendar.py  demo.html  fake_google.py  get_google_token.py  ingest.py  test_config.py  test_repo.py  test_sync.py  test_sync_mock.py
