[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "playsync"
version         = "0.1.0"
description     = "TMU Timetable → Google Calendar synchronisation service"
requires-python = ">=3.12"
dependencies    = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.128",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",        # for FastAPI TestClient
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.xlsx"]
